src/snapshots/jsonptr__assign__json__tests__test@5-data.snap
---
source: src/assign.rs
description: "case #5: asserting that the JSON data is as expected after assignment"
info:
  data: {}
  ptr: /-
  assign: foo
---
{"-":"foo"}
