src/snapshots/jsonptr__assign__json__tests__test@6-data.snap
---
source: src/assign.rs
description: "case #6: asserting that the JSON data is as expected after assignment"
info:
  data: ~
  ptr: /-
  assign: 34
---
[34]
