src/snapshots/jsonptr__assign__json__tests__test@8-data.snap
---
source: src/assign.rs
description: "case #8: asserting that the JSON data is as expected after assignment"
info:
  data: {}
  ptr: /0
  assign: foo
---
{"0":"foo"}
