src/snapshots/jsonptr__assign__json__tests__test@8-result.snap
---
source: src/assign.rs
description: "case #8: asserting that the replaced JSON data returned from the assignment is as expected"
info:
  data: {}
  ptr: /0
  assign: foo
---
Ok(
    None,
)
