src/snapshots/jsonptr__assign__json__tests__test@9-result.snap
---
source: src/assign.rs
description: "case #9: asserting that the replaced JSON data returned from the assignment is as expected"
info:
  data: ~
  ptr: /1
  assign: foo
---
Ok(
    Some(
        Null,
    ),
)
